# data-loader

./: .dockerignore  .env  .gitignore  Cargo.toml  diesel.toml
Docker/: Dockerfile  Dockerfile.prod
database/: Cargo.toml
database/src/: elastic.rs  lib.rs  models.rs  mongo.rs  postgres.rs  schema.rs  utils.rs
