[package]
name = "hello_maps_data_loader"
version = "0.1.0"
authors = ["keita"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2.24",  features=["rt-threaded", "macros"] }
diesel = { version = "1.4.4", features = ["postgres"] }
reqwest = { version = "*", features = ["blocking"] }
async-trait = "0.1.42"
futures = { version = "0.3.*" }
elasticsearch = "7.10.0-alpha.1"
mongodb="1.1.1"
serde_json = "~1"
url= "2.2.0"
actix-web = "3"
indicatif = "0.15.0"
console = "0.14.0"
tui = "0.14"
termion = "1.5"
[lib]
name = "database"
path = "database/src/lib.rs"
